--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -26,11 +26,11 @@ jobs:
 
       - uses: r-lib/actions/setup-renv@v2
       
-      - name: Render Rmarkdown files and Commit Results
+      - name: Render my document to all types
+        run: Rscript -e 'rmarkdown::render("index.Rmd", output_format = "html")'
+      
+      - name: Commit results
         run: |
-          RMD_PATH=($(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '[.]Rmd$'))
-          Rscript -e 'for (f in commandArgs(TRUE)) if (file.exists(f)) rmarkdown::render(f)' ${RMD_PATH[*]}
-          git config --local user.name "$GITHUB_ACTOR"
-          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git commit ${RMD_PATH[*]/.Rmd/.md} -m 'Re-build Rmarkdown files' || echo "No changes to commit"
+          git add .
+          git commit -m 'Re-build index' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
