--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -26,8 +26,8 @@ jobs:
 
       - uses: r-lib/actions/setup-renv@v2
       
-      - name: Render my document to all types
-        run: Rscript -e 'rmarkdown::render("index.Rmd", output_format = "html")'
+      - name: Render my document to html
+        run: Rscript -e 'rmarkdown::render("index.Rmd", output_format = "html_document")'
       
       - name: Commit results
         run: |
