--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -4,14 +4,14 @@ on:
   push:
     paths: ['**.Rmd']
   schedule:
-    - cron: "30 4 * * *"
+    - cron: "30 1 * * *"
   workflow_dispatch:
 
 name: render-rmarkdown
 
 jobs:
   render-rmarkdown:
-    runs-on: macOS-latest
+    runs-on: windows-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
