--- a/.github/workflows/render-rmarkdown.yaml
+++ b/.github/workflows/render-rmarkdown.yaml
@@ -31,8 +31,8 @@ jobs:
       
       - name: Commit results
         run: |
-          git config --global user.email "zehuiyin@gmail.com"
-          git config --global user.name "Zehui Yin"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "GitHub Actions [Bot]"
           git add .
           git commit -m 'Re-build index' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
